[package]
name = "mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "2.6.0", features = ["sync"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"